--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,9 @@
 /********** Template CSS **********/
 :root {
-  --primary: #1e60aa;
-  --secondary: #ff4917;
-  --light: #edf1fc;
-  --dark: #000000;
-  /* --dark: #17224d; */
+  --primary: #1320d8;
+  --secondary: #0b2154;
+  --light: #f2f2f2;
+  --dark: #111111;
 }
 
 .fw-medium {
@@ -17,6 +16,15 @@
   right: 45px;
   bottom: 45px;
   z-index: 99;
+}
+/* .page-header {
+  background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
+    url(../img/keychainproduct.jpg) center center no-repeat;
+  background-size: cover;
+} */
+
+.breadcrumb-item + .breadcrumb-item::before {
+  color: var(--light);
 }
 
 /*** Spinner ***/
@@ -35,7 +43,8 @@
 
 /*** Button ***/
 .btn {
-  font-weight: 600;
+  font-weight: 500;
+  text-transform: uppercase;
   transition: 0.5s;
 }
 
@@ -67,166 +76,131 @@
   align-items: center;
   justify-content: center;
   font-weight: normal;
+  border-radius: 2px;
 }
 
-/* Topbar start */
-.topbar {
-  font-size: 14px;
-  border-bottom: 1px solid #e0e0e0;
-  padding: 0.5rem 1rem;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  flex-wrap: wrap;
+/*** Navbar ***/
+.navbar .dropdown-toggle::after {
+  border: none;
+  content: "\f107";
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+  vertical-align: middle;
+  margin-left: 8px;
 }
 
-/* Contact Info and Social Icons Layout */
-.contact-info,
-.social-icons {
-  display: flex;
-  align-items: center;
-  gap: 1rem;
+.navbar-light .navbar-nav .nav-link {
+  margin-right: 30px;
+  padding: 25px 0;
+  color: #ffffff;
+  font-size: 15px;
+  text-transform: uppercase;
+  outline: none;
 }
 
-/* Social Icons Style */
-.social-icons a {
-  text-decoration: none;
-  color: #333;
-  transition: 0.3s;
+.navbar-light .navbar-nav .nav-link:hover,
+.navbar-light .navbar-nav .nav-link.active {
+  color: var(--primary);
 }
 
-.social-icons a:hover {
-  color: #f5008b;
-}
+@media (max-width: 991.98px) {
+  .navbar-light .navbar-nav .nav-link {
+    margin-right: 0;
+    padding: 10px 0;
+  }
 
-/* Hide topbar on small devices */
-@media (max-width: 576px) {
-  .topbar {
-    display: none;
+  .navbar-light .navbar-nav {
+    border-top: 1px solid #eeeeee;
   }
 }
 
-/* Topbar end */
-
-/* Navbar start */
-.text-pink {
-  color: #f5008b;
+.navbar-light .navbar-brand,
+.navbar-light a.btn {
+  height: 75px;
 }
 
-.navbar .fa {
-  font-size: 18px;
-}
-
-.navbar .badge {
-  font-size: 10px;
-}
-
-.offcanvas-body a {
-  color: #000;
-  text-decoration: none;
+.navbar-light .navbar-nav .nav-link {
+  color: var(--dark);
   font-weight: 500;
 }
 
-.offcanvas-body a:hover {
-  color: #f5008b;
+.navbar-light.sticky-top {
+  top: -100px;
+  transition: 0.5s;
 }
 
-.toggle-submenu {
-  transition: all 0.3s ease;
-}
+@media (min-width: 992px) {
+  .navbar .nav-item .dropdown-menu {
+    display: block;
+    border: none;
+    margin-top: 0;
+    top: 150%;
+    opacity: 0;
+    visibility: hidden;
+    transition: 0.5s;
+  }
 
-.submenu {
-  transition: all 0.3s ease;
+  .navbar .nav-item:hover .dropdown-menu {
+    top: 100%;
+    visibility: visible;
+    transition: 0.5s;
+    opacity: 1;
+  }
 }
-/* End navbar  */
 
 /*** Header ***/
-.header-carousel .container,
-.page-header .container {
-  position: relative;
-  padding: 45px 0 45px 35px;
-  border-left: 15px solid #ffffff;
-}
-
-.header-carousel .container::before,
-.header-carousel .container::after,
-.page-header .container::before,
-.page-header .container::after {
-  position: absolute;
-  content: "";
+.carousel-caption {
   top: 0;
   left: 0;
-  width: 100px;
-  height: 15px;
-  background: #ffffff;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.7);
+  z-index: 1;
 }
 
-.header-carousel .container::after,
-.page-header .container::after {
-  top: 100%;
-  margin-top: -15px;
+.carousel-control-prev,
+.carousel-control-next {
+  width: 10%;
+}
+
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+  width: 3rem;
+  height: 3rem;
 }
 
 @media (max-width: 768px) {
-  .header-carousel .owl-carousel-item {
+  #header-carousel .carousel-item {
     position: relative;
-    min-height: 500px;
+    min-height: 450px;
   }
 
-  .header-carousel .owl-carousel-item img {
+  #header-carousel .carousel-item img {
     position: absolute;
     width: 100%;
     height: 100%;
     object-fit: cover;
   }
-
-  .header-carousel .owl-carousel-item h5,
-  .header-carousel .owl-carousel-item p {
-    font-size: 14px !important;
-    font-weight: 400 !important;
-  }
-
-  .header-carousel .owl-carousel-item h1 {
-    font-size: 30px;
-    font-weight: 600;
-  }
-}
-
-.header-carousel .owl-nav {
-  position: absolute;
-  top: 50%;
-  right: 8%;
-  transform: translateY(-50%);
-  display: flex;
-  flex-direction: column;
-}
-
-.header-carousel .owl-nav .owl-prev,
-.header-carousel .owl-nav .owl-next {
-  margin: 7px 0;
-  width: 45px;
-  height: 45px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: #ffffff;
-  background: transparent;
-  border: 1px solid #ffffff;
-  border-radius: 45px;
-  font-size: 22px;
-  transition: 0.5s;
-}
-
-.header-carousel .owl-nav .owl-prev:hover,
-.header-carousel .owl-nav .owl-next:hover {
-  background: var(--primary);
-  border-color: var(--primary);
 }
 
 .page-header {
-  background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
-    url(../img/bg.jpg) center center no-repeat;
+  background-position: center center;
+  background-repeat: no-repeat;
   background-size: cover;
+}
+
+.page-header-inner {
+  background: rgba(0, 0, 0, 0.7);
+}
+
+.breadcrumb-item + .breadcrumb-item::before {
+  color: var(--light);
+}
+.page-header {
+  background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
+    url(../img/bgbanner2.jpg) center center no-repeat;
+  background-size: cover;
+  opacity: 10;
 }
 
 .breadcrumb-item + .breadcrumb-item::before {
@@ -235,157 +209,32 @@
 
 /*** Facts ***/
 .fact {
-  background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
-    url(../img/t_pro_1.jpg) center center no-repeat;
+  background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
+    url(../img/carousel-bg-1.jpg);
+  background-position: center center;
+  background-repeat: no-repeat;
   background-size: cover;
 }
 
 /*** Service ***/
-.service-item-top img {
-  transition: 0.5s;
-}
-
-.service-item-top:hover img {
-  transform: scale(1.1);
-}
-
-.service-carousel .owl-dots {
-  margin-top: 24px;
-  display: flex;
-  align-items: flex-end;
-  justify-content: center;
-}
-
-.service-carousel .owl-dot {
-  position: relative;
-  display: inline-block;
-  margin: 0 5px;
-  width: 15px;
-  height: 15px;
-  background: var(--primary);
-  border: 5px solid var(--light);
-  transition: 0.5s;
-}
-
-.service-carousel .owl-dot.active {
+.service .nav .nav-link {
   background: var(--light);
-  border-color: var(--primary);
+  transition: 0.5s;
+}
+
+.service .nav .nav-link.active {
+  background: var(--primary);
+}
+
+.service .nav .nav-link.active h4 {
+  color: #ffffff !important;
 }
 
 /*** Booking ***/
-.video {
-  position: relative;
-  padding: 8rem 0 12rem 0;
-  background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
-    url(../img/carousel-1.jpg) center center no-repeat;
+.booking {
+  background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
+    url(../img/rug_4.jpeg) center center no-repeat;
   background-size: cover;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-.video .btn-play {
-  position: relative;
-  box-sizing: content-box;
-  display: block;
-  width: 32px;
-  height: 44px;
-  border-radius: 50%;
-  border: none;
-  outline: none;
-  padding: 18px 20px 18px 28px;
-  margin-bottom: 4rem;
-}
-
-.video .btn-play:before {
-  content: "";
-  position: absolute;
-  z-index: 0;
-  left: 50%;
-  top: 50%;
-  transform: translateX(-50%) translateY(-50%);
-  display: block;
-  width: 100px;
-  height: 100px;
-  background: #ffffff;
-  border-radius: 50%;
-  animation: pulse-border 1500ms ease-out infinite;
-}
-
-.video .btn-play:after {
-  content: "";
-  position: absolute;
-  z-index: 1;
-  left: 50%;
-  top: 50%;
-  transform: translateX(-50%) translateY(-50%);
-  display: block;
-  width: 100px;
-  height: 100px;
-  background: #ffffff;
-  border-radius: 50%;
-  transition: all 200ms;
-}
-
-.video .btn-play img {
-  position: relative;
-  z-index: 3;
-  max-width: 100%;
-  width: auto;
-  height: auto;
-}
-
-.video .btn-play span {
-  display: block;
-  position: relative;
-  z-index: 3;
-  width: 0;
-  height: 0;
-  border-left: 32px solid var(--primary);
-  border-top: 22px solid transparent;
-  border-bottom: 22px solid transparent;
-}
-
-@keyframes pulse-border {
-  0% {
-    transform: translateX(-50%) translateY(-50%) translateZ(0) scale(1);
-    opacity: 1;
-  }
-
-  100% {
-    transform: translateX(-50%) translateY(-50%) translateZ(0) scale(1.5);
-    opacity: 0;
-  }
-}
-
-#videoModal {
-  z-index: 99999;
-}
-
-#videoModal .modal-dialog {
-  position: relative;
-  max-width: 800px;
-  margin: 60px auto 0 auto;
-}
-
-#videoModal .modal-body {
-  position: relative;
-  padding: 0px;
-}
-
-#videoModal .close {
-  position: absolute;
-  width: 30px;
-  height: 30px;
-  right: 0px;
-  top: -30px;
-  z-index: 999;
-  font-size: 30px;
-  font-weight: normal;
-  color: #ffffff;
-  background: #000000;
-  opacity: 1;
 }
 
 .bootstrap-datetimepicker-widget.bottom {
@@ -415,44 +264,25 @@
 }
 
 /*** Team ***/
-.team-item img {
-  transition: 0.5s;
-}
-
-.team-item:hover img {
-  transform: scale(1.1);
-}
-
-.team-item .team-text {
-  height: 90px;
-  overflow: hidden;
-}
-
-.team-item .team-text .bg-light,
-.team-item .team-text .bg-primary {
-  position: relative;
-  height: 90px;
+.team-item .team-overlay {
   display: flex;
   align-items: center;
   justify-content: center;
-  flex-direction: column;
+  background: var(--primary);
+  transform: scale(0);
   transition: 0.5s;
 }
 
-.team-item .team-text .bg-primary {
-  flex-direction: row;
+.team-item:hover .team-overlay {
+  transform: scale(1);
 }
 
-.team-item:hover .team-text .bg-light {
-  margin-top: -90px;
-}
-
-.team-item .team-text .bg-primary .btn {
+.team-item .team-overlay .btn {
   color: var(--primary);
   background: #ffffff;
 }
 
-.team-item .team-text .bg-primary .btn:hover {
+.team-item .team-overlay .btn:hover {
   color: #ffffff;
   background: var(--secondary);
 }
@@ -460,7 +290,6 @@
 /*** Testimonial ***/
 .testimonial-carousel .owl-item .testimonial-text,
 .testimonial-carousel .owl-item.center .testimonial-text * {
-  position: relative;
   transition: 0.5s;
 }
 
@@ -472,53 +301,35 @@
   color: #ffffff !important;
 }
 
-.testimonial-carousel .owl-item .testimonial-text::after {
-  position: absolute;
-  content: "";
-  width: 0;
-  height: 0;
-  left: 50%;
-  bottom: -30px;
-  transform: translateX(-50%);
-  border: 15px solid;
-  border-color: var(--light) transparent transparent transparent;
-  transition: 0.5s;
-}
-
-.testimonial-carousel .owl-item.center .testimonial-text::after {
-  border-color: var(--primary) transparent transparent transparent;
-}
-
-.testimonial-carousel .owl-nav {
-  position: absolute;
-  width: 350px;
-  bottom: 100px;
-  left: 50%;
-  transform: translateX(-50%);
+.testimonial-carousel .owl-dots {
+  margin-top: 24px;
   display: flex;
-  justify-content: space-between;
-  opacity: 0;
+  align-items: flex-end;
+  justify-content: center;
+}
+
+.testimonial-carousel .owl-dot {
+  position: relative;
+  display: inline-block;
+  margin: 0 5px;
+  width: 15px;
+  height: 15px;
+  border: 1px solid #cccccc;
   transition: 0.5s;
-  z-index: 1;
 }
 
-.testimonial-carousel:hover .owl-nav {
-  width: 300px;
-  opacity: 1;
-}
-
-.testimonial-carousel .owl-nav .owl-prev,
-.testimonial-carousel .owl-nav .owl-next {
-  font-size: 30px;
-  color: var(--primary);
-}
-
-.testimonial-carousel .owl-nav .owl-prev:hover,
-.testimonial-carousel .owl-nav .owl-next:hover {
-  color: var(--dark);
+.testimonial-carousel .owl-dot.active {
+  background: var(--primary);
+  border-color: var(--primary);
 }
 
 /*** Footer ***/
+.footer {
+  background: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9)),
+    url(../img/rug_5.jpeg) center center no-repeat;
+  background-size: cover;
+}
+
 .footer .btn.btn-social {
   margin-right: 5px;
   width: 35px;
@@ -569,4 +380,16 @@
 
 .footer .copyright a {
   color: var(--light);
+}
+
+.footer .footer-menu a {
+  margin-right: 15px;
+  padding-right: 15px;
+  border-right: 1px solid rgba(255, 255, 255, 0.3);
+}
+
+.footer .footer-menu a:last-child {
+  margin-right: 0;
+  padding-right: 0;
+  border-right: none;
 }
